--- a/ifac_si_api/src/main/resources/application.properties
+++ b/ifac_si_api/src/main/resources/application.properties
@@ -5,7 +5,7 @@ server.port=9000
 # Fonte de dados:
 spring.datasource.url=jdbc:mysql://localhost:3306/ifacSI?createDatabaseIfNotExist=true
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=root
 
 # JPA/Hibernate/ORM:
 spring.jpa.show-sql=true
