--- a/ifac_si_app/angular.json
+++ b/ifac_si_app/angular.json
@@ -99,9 +99,16 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.css",
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "./node_modules/quill/dist/quill.core.css",
+              "./node_modules/quill/dist/quil.snow.css"
             ],
-            "scripts": []
+            "scripts": [
+              "node_modules/jquery/dist/query.min.js",
+              "node_modules/bootstrap/dist/js/bootstrap.min.js",
+              "./node_modules/quill/dist/quill.min.js"
+            ]
           }
         }
       }
