--- a/ifac_si_app/package.json
+++ b/ifac_si_app/package.json
@@ -21,9 +21,10 @@
     "@angular/platform-server": "^17.1.0",
     "@angular/router": "^17.1.0",
     "@angular/ssr": "^17.1.0",
-    "bootstrap": "^5.3.3",
+    "bootstrap": "^3.4.1",
     "bootstrap-icons": "^1.11.3",
     "express": "^4.18.2",
+    "ngx-quill": "^25.3.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
