--- a/ifac_si_app/angular.json
+++ b/ifac_si_app/angular.json
@@ -35,9 +35,16 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.css",
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "node_modules/quill/dist/quill.core.css",
+              "node_modules/quill/dist/quill.snow.css"
             ],
-            "scripts": [],
+            "scripts": [
+              "node_modules/jquery/dist/jquery.min.js",
+              "node_modules/bootstrap/dist/js/bootstrap.bundle.min.js",
+              "node_modules/quill/dist/quill.min.js"
+            ],
             "server": "src/main.server.ts",
             "prerender": true,
             "ssr": {
@@ -99,16 +106,9 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css",
-              "node_modules/bootstrap/dist/css/bootstrap.min.css",
-              "./node_modules/quill/dist/quill.core.css",
-              "./node_modules/quill/dist/quil.snow.css"
+              "src/styles.css"
             ],
-            "scripts": [
-              "node_modules/jquery/dist/query.min.js",
-              "node_modules/bootstrap/dist/js/bootstrap.min.js",
-              "./node_modules/quill/dist/quill.min.js"
-            ]
+            "scripts": []
           }
         }
       }
