--- a/ifac_si_api/src/main/resources/application.properties
+++ b/ifac_si_api/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=ifac_si_api
 
-server.port=9000
+server.port=8080
 
 # Fonte de dados:
 spring.datasource.url=jdbc:mysql://localhost:3306/ifacSI?createDatabaseIfNotExist=true
@@ -21,3 +21,10 @@ spring.sql.init.encoding=UTF-8
 # Erro
 server.error.include-exception=true
 server.error.include-message=always
+
+springdoc.api-docs.enabled=true
+springdoc.swagger-ui.enabled=true
+springdoc.swagger-ui.path=/swagger-ui.html
+
+
+
