--- a/ifac_si_api/src/main/resources/application.properties
+++ b/ifac_si_api/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.application.name=ifac_si_api
 
+# Alterei por conflito de portas
 server.port=8080
 
 # Fonte de dados:
@@ -22,9 +23,12 @@ spring.sql.init.encoding=UTF-8
 server.error.include-exception=true
 server.error.include-message=always
 
+# Swagger
 springdoc.api-docs.enabled=true
 springdoc.swagger-ui.enabled=true
 springdoc.swagger-ui.path=/swagger-ui.html
 
+spring.jackson.default-property-inclusion=non_null
+spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
 
 
