--- a/ifac_si_api/src/main/resources/application.properties
+++ b/ifac_si_api/src/main/resources/application.properties
@@ -13,7 +13,7 @@ spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
-# InicializaÃ§Ã£o do banco de dados com scripts SQL:
+# Inicialização do banco de dados com scripts SQL:
 spring.jpa.defer-datasource-initialization=true
 spring.sql.init.mode=always
 spring.sql.init.continue-on-error=true
@@ -27,8 +27,16 @@ server.error.include-message=always
 springdoc.api-docs.enabled=true
 springdoc.swagger-ui.enabled=true
 springdoc.swagger-ui.path=/swagger-ui.html
+springdoc.api-docs.path=/v3/api-docs
+spring.servlet.multipart.enabled=true
 
 spring.jackson.default-property-inclusion=non_null
 spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
 
+minio.endpoint=http://localhost:9000
+minio.accessKey=admin
+minio.secretKey=admin123
+minio.bucket.name=imagens-postagens
 
+spring.servlet.multipart.max-file-size=1000MB
+spring.servlet.multipart.max-request-size=1000MB
