--- a/ifac_si_api/src/main/resources/application.properties
+++ b/ifac_si_api/src/main/resources/application.properties
@@ -8,10 +8,20 @@ spring.datasource.url=jdbc:mysql://localhost:3306/ifacSI?createDatabaseIfNotExis
 spring.datasource.username=root
 spring.datasource.password=root
 
+flyway.url=jdbc:mysql://localhost:3306/ifacSI
+flyway.user=root
+#flyway.password=root
+flyway.schemas=public
+
+
 # JPA/Hibernate/ORM:
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
+# flyway - migrations
+spring.flyway.baseline-on-migrate=true
+spring.flyway.locations
 
 # Inicialização do banco de dados com scripts SQL:
 spring.jpa.defer-datasource-initialization=true
@@ -30,13 +40,17 @@ springdoc.swagger-ui.path=/swagger-ui.html
 springdoc.api-docs.path=/v3/api-docs
 spring.servlet.multipart.enabled=true
 
+# Jackson
 spring.jackson.default-property-inclusion=non_null
 spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
 
+#MinIO
 minio.endpoint=http://localhost:9000
 minio.accessKey=admin
 minio.secretKey=admin123
 minio.bucket.name=imagens-postagens
 
+# MultipartFile
 spring.servlet.multipart.max-file-size=1000MB
 spring.servlet.multipart.max-request-size=1000MB
+
