Tentando subir back

--- a/ifac_si_api/pom.xml
+++ b/ifac_si_api/pom.xml
@@ -64,11 +64,11 @@
 			<optional>true</optional>
 		</dependency>
 
-		<dependency>
+		<!-- <dependency>
             <groupId>ifac.si.com</groupId>
             <artifactId>ifac_si_api</artifactId>
             <version>0.0.1-SNAPSHOT</version>
-        </dependency>
+        </dependency> -->
     </dependencies>
 
 	<build>
