--- a/ifac_si_api/src/main/resources/application.properties
+++ b/ifac_si_api/src/main/resources/application.properties
@@ -10,10 +10,10 @@ spring.datasource.password=root
 
 # JPA/Hibernate/ORM:
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
-# Inicialização do banco de dados com scripts SQL:
+# Inicializaï¿½ï¿½o do banco de dados com scripts SQL:
 spring.jpa.defer-datasource-initialization=true
 spring.sql.init.mode=always
 spring.sql.init.continue-on-error=true
@@ -29,13 +29,7 @@ springdoc.swagger-ui.enabled=true
 springdoc.swagger-ui.path=/swagger-ui.html
 springdoc.api-docs.path=/v3/api-docs
 spring.servlet.multipart.enabled=true
-
-<<<<<<< HEAD
-# Jackson
-spring.jackson.default-property-inclusion=non_null
-=======
 spring.jackson.default-property-inclusion=NON_NULL
->>>>>>> 9adc5d61ac00439886888bc0e5bb9ddac14c1e4b
 spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
 
 #MinIO
