configurando jwt e oauth2

--- a/ifac_si_api/src/main/resources/application.properties
+++ b/ifac_si_api/src/main/resources/application.properties
@@ -13,7 +13,7 @@ spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
-# Inicialização do banco de dados com scripts SQL:
+# Initializacao do banco de dados com scripts SQL:
 spring.jpa.defer-datasource-initialization=true
 spring.sql.init.mode=always
 spring.sql.init.continue-on-error=true
@@ -44,3 +44,6 @@ minio.bucket.name=imagens-postagens
 spring.servlet.multipart.max-file-size=1000MB
 spring.servlet.multipart.max-request-size=1000MB
 
+# Jwt
+jwt.secret=sua_chave_secreta_muito_longa_aqui_base64
+jwt.expiration=86400000
