--- a/ifac_si_api/src/main/resources/application.properties
+++ b/ifac_si_api/src/main/resources/application.properties
@@ -38,7 +38,7 @@ spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
 minio.endpoint=http://localhost:9000
 minio.accessKey=admin
 minio.secretKey=admin123
-minio.bucket.name=imagens-postagens
+minio.bucket.name=imagens
 
 # MultipartFile
 spring.servlet.multipart.max-file-size=1000MB
