--- a/ifac_si_app/angular.json
+++ b/ifac_si_app/angular.json
@@ -24,7 +24,6 @@
           "builder": "@angular-devkit/build-angular:application",
           "options": {
             "optimization": true,
-            "buildOptimizer": true,
             "outputPath": "dist/ifac_si_app",
             "index": "src/index.html",
             "browser": "src/main.ts",
@@ -63,17 +62,15 @@
                 },
                 {
                   "type": "anyComponentStyle",
-                  "maximumWarning": "5kb",
-                  "maximumError": "6kb"
+                  "maximumWarning": "10kb",
+                  "maximumError": "12kb"
                 }
               ],
               "optimization": true,
               "outputHashing": "all",
               "sourceMap": false,
               "namedChunks": false,
-              "extractLicenses": true,
-              "vendorChunk": false,
-              "buildOptimizer": true
+              "extractLicenses": true
             },
             "development": {
               "optimization": false,
