--- a/ifac_si_app/package.json
+++ b/ifac_si_app/package.json
@@ -22,10 +22,13 @@
     "@angular/platform-browser": "^17.1.0",
     "@angular/platform-browser-dynamic": "^17.1.0",
     "@angular/router": "^17.1.0",
+    "@popperjs/core": "^2.11.8",
     "@stomp/stompjs": "^7.1.1",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
+    "buffer": "^6.0.3",
     "express": "^4.18.2",
+    "font-awesome": "^4.7.0",
     "jquery": "^3.7.1",
     "ngx-quill": "^25.3.3",
     "rxjs": "~7.8.0",
@@ -42,13 +45,13 @@
     "@types/jasmine": "~5.1.0",
     "@types/node": "^18.18.0",
     "@types/sockjs-client": "^1.5.4",
+    "cypress": "latest",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
-    "typescript": "~5.3.2",
-    "cypress": "latest"
+    "typescript": "~5.3.2"
   }
 }
