--- a/ifac_si_api/src/main/resources/application.properties
+++ b/ifac_si_api/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.application.name=ifac_si_api
 server.port=8080
 
 # Fonte de dados:
-spring.datasource.url=jdbc:mysql://db:3306/ifacSI?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://localhost:3306/ifacSI?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=root
 
