--- a/ifac_si_api/pom.xml
+++ b/ifac_si_api/pom.xml
@@ -108,6 +108,13 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-aop</artifactId>
 		</dependency>
+
+		<dependency>
+			<groupId>org.jsoup</groupId>
+			<artifactId>jsoup</artifactId>
+			<version>1.17.2</version> <!-- ou a versão mais recente -->
+		</dependency>
+
     </dependencies>
 
 	<build>
