--- a/hugo.toml
+++ b/hugo.toml
@@ -30,16 +30,21 @@ theme = 'mainroad'
   weight = 1
 
 [[menu.main]]
+  name = "O curso"
+  url = "/o-curso/"
+  weight = 2
+
+[[menu.main]]
   name = "Horários"
   url = "https://ifac.si/horarios/"
-  weight = 2
+  weight = 3
 
 [[menu.main]]
   name = "Calendário"
   url = "https://ifac.si/calendario/"
-  weight = 3
+  weight = 4
 
 [[menu.main]]
   name = "Suap"
   url = "https://suap.ifac.edu.br/"
-  weight = 4
+  weight = 5
