Convert Horários to Hugo content page and add Repositório page
Replaced the static HTML schedule page with a proper Hugo content page,
improved table styling, and added a hidden Repositório page accessible
via direct URL.

--- a/hugo.toml
+++ b/hugo.toml
@@ -36,7 +36,7 @@ theme = 'mainroad'
 
 [[menu.main]]
   name = "Horários"
-  url = "https://ifac.si/horarios/"
+  url = "/horarios/"
   weight = 3
 
 [[menu.main]]
@@ -47,4 +47,4 @@ theme = 'mainroad'
 [[menu.main]]
   name = "Suap"
   url = "https://suap.ifac.edu.br/"
-  weight = 5
+  weight = 6
