--- a/hugo.toml
+++ b/hugo.toml
@@ -36,14 +36,19 @@ theme = 'mainroad'
   weight = 2
 
 [[menu.main]]
+  name = "Documentos"
+  url = "/documentos/"
+  weight = 3
+
+[[menu.main]]
   name = "Horários"
   url = "/horarios/"
-  weight = 3
+  weight = 4
 
 [[menu.main]]
   name = "Calendário"
   url = "https://ifac.si/calendario/"
-  weight = 4
+  weight = 5
 
 [[menu.main]]
   name = "Suap"
