Add Calendário and Documentos pages, update menu
- Create Calendário page with academic calendar layout matching PDF
- Add Documentos page with links to PPC, ODP, and regulations
- Update menu: add Documentos item, change Calendário to internal page
- Calendar includes monthly grids, holidays, events, and school days count

--- a/hugo.toml
+++ b/hugo.toml
@@ -47,7 +47,7 @@ theme = 'mainroad'
 
 [[menu.main]]
   name = "Calendário"
-  url = "https://ifac.si/calendario/"
+  url = "/calendario/"
   weight = 5
 
 [[menu.main]]
