Reorganize content structure and add styling improvements
- Restructure curso and documentos as directories with subpages
- Replace Hello World post with Olá, mundo! in Portuguese
- Add dropdown menu support for nested navigation
- Add CSS for consistent table column alignment
- Configure mainSections to display posts on homepage

--- a/hugo.toml
+++ b/hugo.toml
@@ -5,6 +5,8 @@ theme = 'mainroad'
 
 [params]
   copyright = 'Gustavo Cardial'
+  customCSS = ["/css/dropdown.css", "/css/tables.css"]
+  mainSections = ["posts"]
 
 [author]
   name = 'Gustavo Cardial'
@@ -36,9 +38,21 @@ theme = 'mainroad'
   weight = 2
 
 [[menu.main]]
+  name = "Matriz curricular"
+  url = "/curso/matriz-curricular/"
+  parent = "O curso"
+  weight = 1
+
+[[menu.main]]
   name = "Documentos"
   url = "/documentos/"
   weight = 3
+
+[[menu.main]]
+  name = "Colegiado"
+  url = "/documentos/colegiado/"
+  parent = "Documentos"
+  weight = 1
 
 [[menu.main]]
   name = "Horários"
